# progetto-tesi

./: .gitignore
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/data/: chat_history.db  chat_history.db-shm  chat_history.db-wal
backend/data/chroma_db/: chroma.sqlite3
backend/data/chroma_db/4a3fc924-8844-4e4f-b457-e9549761c715/: index_metadata.pickle
backend/data/chroma_db_gem/: chroma.sqlite3
backend/data/images/2511.19331v1/: registry.json
backend/data/images/2512.08417v2/: registry.json
backend/data/images/2512.08575v1/: registry.json
backend/data/images/2512.08864v2/: registry.json
backend/data/images/2512.18303v1/: registry.json
backend/data/images/2512.18542v2/: registry.json
backend/data/images/2512.23607v1/: registry.json
backend/data/images/2602.02641v1/: registry.json
backend/data/images/2602.12183v1/: registry.json
backend/data/images/2602.21267v1/: registry.json
backend/data/images/2602.22218v1/: registry.json
backend/data/images/2603.00960v1/: registry.json
backend/data/images/2603.02891v2/: registry.json
backend/src/: config.py
backend/src/agent/: graph.py  prompts.py  state.py
backend/src/api/: chat.py  conversations.py  documents.py  schemas.py
backend/src/services/: chroma_service.py  document_validator.py  eval_ragas.py  export_chunks.py  groq_client.py  image_extractor.py  ingest_base_knowledge.py  llm_client.py  pdf_processor.py
backend/src/test/: test_agent.py  test_deleteDoc.py  test_getChunk.py  test_getImage.py  test_ingestion.py  test_llm.py
frontend/: README.md  (+2 more)
(+47 files in other folders)
